--- a/exercises/34 - Click Outside/click-outside.html
+++ b/exercises/34 - Click Outside/click-outside.html
@@ -87,7 +87,7 @@
     }
 
     .modal-inner {
-      max-width: 600px;
+      max-width: 500px;
       min-width: 400px;
       padding: 2rem;
       border-radius: 5px;
@@ -101,7 +101,8 @@
       transform: translateY(0);
     }
   </style>
-  <script src="./click-outside.js"></script>
+  <!-- <script src="./click-outside.js"></script> -->
+  <script src="./myClick.js"></script>
 </body>
 
 </html>
